k8s/edumeet/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: edumeet
  namespace: sensecaremeet
  labels:
    app: edumeet
spec:
  replicas: 1
  selector:
    matchLabels:
      app: edumeet
  template:
    metadata:
      labels:
        app: edumeet
    spec:
      containers:
        - name: edumeet
          image: ghcr.io/fuhrealtimeemotions/sensecaremeet:feat-automate-build-and-deployment
          imagePullPolicy: IfNotPresent
          ports:
          - containerPort: 8080
            name: web-http
          - containerPort: 8010
            name: api
          # env:
          # - name: STUNNER_USER
          #   valueFrom:
          #     secretKeyRef:
          #       name: stunner-auth-secret
          #       key: username
          volumeMounts:
          - name: server-config
            mountPath: /edumeet/server/dist/config
            readOnly: false
          - name: app-config
            mountPath: /edumeet/server/dist/public/config
            readOnly: true
      imagePullSecrets:
      - name: ghcr-pull-secret
      volumes:
      - name: server-config
        configMap:
          name: edumeet-server-config
          items:
          - key: config.yaml
            path: config.yaml
          - key: config.js
            path: config.js
      - name: app-config
        configMap:
          name: edumeet-app-config
          items:
          - key: config.js
            path: config.js
