k8s/edumeet/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: edumeet
  namespace: scmeet
  labels:
    app: edumeet
spec:
  ports:  
  - port: 8080
    name: web-http
  - port: 8010
    name: api
  selector:
    app: edumeet
