k8s/edumeet/stunner.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: GatewayClass
metadata:
  name: scmeet-gatewayclass
spec:
  controllerName: "stunner.l7mp.io/gateway-operator"
  parametersRef:
    group: "stunner.l7mp.io"
    kind: GatewayConfig
    name: scmeet-gatewayconfig
    namespace: scmeet
  description: "STUNner is a WebRTC ingress gateway for Kubernetes"
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: Gateway
metadata:
  name: scmeet-udp-gateway
  namespace: scmeet
spec:
  gatewayClassName: scmeet-gatewayclass
  listeners:
    - name: udp-listener
      port: 3478
      protocol: UDP
